--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -6,7 +6,24 @@
 	id="WebApp_ID" version="2.5">
 
 
+    <!-- Filter that forces UTF-8 encoding -->
+    <filter>
+        <filter-name>SetCharacterEncodingFilter</filter-name>
+        <filter-class>org.springframework.web.filter.CharacterEncodingFilter</filter-class>
+        <init-param>
+            <param-name>encoding</param-name>
+            <param-value>UTF8</param-value>
+        </init-param>
+        <init-param>
+            <param-name>forceEncoding</param-name>
+            <param-value>true</param-value>
+        </init-param>
+    </filter>
 
+    <filter-mapping>
+        <filter-name>SetCharacterEncodingFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
 	<!--<filter> -->
 	<!--<filter-name>HiddenHttpMethodFilter</filter-name> -->
 	<!--<filter-class>org.springframework.web.filter.HiddenHttpMethodFilter</filter-class> -->
@@ -28,6 +45,7 @@
 		<filter-name>MultipartFilter</filter-name>
 		<url-pattern>/secure/*</url-pattern>
 	</filter-mapping>
+
 	<filter-mapping>
 		<filter-name>springSecurityFilterChain</filter-name>
 		<url-pattern>/*</url-pattern>
