--- a/pom.xml
+++ b/pom.xml
@@ -44,55 +44,36 @@
         </resources>
 
         <plugins>
-
         <!-- MAVEN -->
-        <plugin>
-            <artifactId>maven-antrun-plugin</artifactId>
-        </plugin>
-        <plugin>
-            <artifactId>maven-clean-plugin</artifactId>
-        </plugin>
-        <plugin>
-            <artifactId>maven-dependency-plugin</artifactId>
-        </plugin>
-        <plugin>
-            <artifactId>maven-deploy-plugin</artifactId>
-        </plugin>
-        <plugin>
-            <artifactId>maven-install-plugin</artifactId>
-        </plugin>
-        <plugin>
-            <artifactId>maven-jar-plugin</artifactId>
-        </plugin>
-        <plugin>
-            <artifactId>maven-javadoc-plugin</artifactId>
-        </plugin>
-        <plugin>
-            <artifactId>maven-plugin-plugin</artifactId>
-        </plugin>
-        <plugin>
-            <artifactId>maven-release-plugin</artifactId>
-        </plugin>
-        <plugin>
-            <artifactId>maven-resources-plugin</artifactId>
-        </plugin>
-        <plugin>
-            <artifactId>maven-site-plugin</artifactId>
-            <configuration>
-                <locales>en,es</locales>
-            </configuration>
-        </plugin>
-        <plugin>
-            <artifactId>maven-source-plugin</artifactId>
-        </plugin>
+            <plugin>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <version>2.4</version>
+            </plugin>
+            <plugin>
+                <artifactId>maven-jar-plugin</artifactId>
+                <version>2.4</version>
+            </plugin>
+            <plugin>
+                <artifactId>maven-clean-plugin</artifactId>
+                <version>2.4.1</version>
+            </plugin>
+            <plugin>
+                <artifactId>maven-deploy-plugin</artifactId>
+                <version>2.7</version>
+                <configuration>
+                    <skip>true</skip>
+                </configuration>
+            </plugin>
         <plugin>
             <artifactId>maven-surefire-plugin</artifactId>
+            <version>2.19.1</version>
             <configuration>
                 <argLine>-Xmx256m</argLine>
             </configuration>
         </plugin>
         <plugin>
             <artifactId>maven-war-plugin</artifactId>
+            <version>2.6</version>
             <configuration>
                 <webXml>src/main/webapp/WEB-INF/web.xml</webXml>
                 <warName>${WAR_NAME}</warName>
@@ -105,26 +86,12 @@
                             <include>**/web.xml</include>
                         </includes>
                     </resource>
-                    <!--<resource>-->
-                        <!--<directory>src/main/webapp/WEB-INF/views/</directory>-->
-                        <!--<excludes>-->
-                            <!--<exclude>**/*.jsp</exclude>-->
-                        <!--</excludes>-->
-                    <!--</resource>-->
-                    <!--<resource>-->
-                        <!--<directory>target/${project.build.finalName}/WEB-INF/views</directory>-->
-                        <!--<targetPath>WEB-INF/views</targetPath>-->
-                    <!--</resource>-->
                 </webResources>
             </configuration>
         </plugin>
         <plugin>
             <artifactId>maven-assembly-plugin</artifactId>
-        </plugin>
-
-        <plugin>
-            <groupId>org.codehaus.mojo</groupId>
-            <artifactId>sonar-maven-plugin</artifactId>
+            <version>2.6</version>
         </plugin>
         <plugin>
             <groupId>org.codehaus.mojo</groupId>
@@ -135,9 +102,10 @@
             <groupId>org.apache.maven.plugins</groupId>
             <artifactId>maven-compiler-plugin</artifactId>
             <inherited>true</inherited>
+            <version>2.5.1</version>
             <configuration>
-                <source>1.7</source>
-                <target>1.7</target>
+                <source>1.8</source>
+                <target>1.8</target>
                 <encoding>UTF-8</encoding>
                 <fork>true</fork>
             </configuration>
